Publish Karaf Decanter 1.4.0 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1802737 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Decanter 1.4.0 has been released! (23/7/17)</b><br/>
+                                        Apache Karaf Decanter 1.4.0 is a new major release on the Decanter 1.x serie including bug fixes and couple of new features like the new Apache Camel Event Notifier.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('decanter_installation.html')">Installation</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338800')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Cellar 4.0.4 has been released! (15/5/17)</b><br/>
                                         Apache Karaf Cellar 4.0.4 is a maintenance release on the Cellar 4.x serie including important bug fixes.
 				   </div>
@@ -296,21 +311,6 @@
 				   </div>
 				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
 					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335948')">Release Notes</a></p>
-			   </div>
-			</center>
-		   </div>
-                    <div>
-			<center>
-			    <div class="banner--text">
-				<br/>
-
-				<div class="banner--text">
-				   <div class="container-fluid">
-					<b>Karaf Cellar 4.0.1 has been released! (17/7/16)</b><br/>
-					This is a maintenance release on the Cellar 4.x serie including bug fixes and couple of new features.
-				   </div>
-				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
-					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334169')">Release Notes</a></p>
 			   </div>
 			</center>
 		   </div>
