--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -62,6 +62,11 @@
         <div id="content">
             <h2 id="2017">2017</h2>
             <p style="font-size:11px">
+                    <b>Karaf Decanter 1.4.0 has been released! (23/7/17)</b><br/>
+		    Apache Karaf Decanter 1.4.0 is a new major release on the Decanter 1.x serie including bug fixes and couple of new features like the new Apache Camel Event Notifier.
+                    <a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338800')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
                     <b>Karaf Cellar 4.1.0 has been released! (15/5/17)</b><br/>
                     Apache Karaf Cellar 4.1.0 is the first release on the Cellar 4.1.x serie, fully compatible with Karaf 4.1.x and bringing important improvements and bug fixes.
                     <a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340376')">Release Notes</a> 
