--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -109,6 +109,8 @@
                 <li>
                     <b><a href="#decanter">Karaf Decanter</a></b>
                     <ul>
+                        <li><a href="#decanter-130">1.3.0</a></li>
+                        <li><a href="#decanter-120">1.2.0</a></li>
                         <li><a href="#decanter-110">1.1.0</a></li>
                         <li><a href="#decanter-101">1.0.1</a></li>
                         <li><a href="#decanter-100">1.0.0</a></li>
@@ -595,6 +597,26 @@
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12317874')">Release Notes</a></li>
             </ul>
             <h2 id="decanter">Karaf Decanter</h2>
+            <h3 id="decanter-130">Karaf Decanter 1.3.0</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/decanter/1.3.0/apache-karaf-decanter-1.3.0-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/decanter/1.3.0/apache-karaf-decanter-1.3.0-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338064')">Release Notes</a></li>
+            </ul>
+            <h3 id="decanter-120">Karaf Decanter 1.2.0</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/decanter/1.2.0/apache-karaf-decanter-1.2.0-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/decanter/1.2.0/apache-karaf-decanter-1.2.0-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335659')">Release Notes</a></li>
+            </ul>
             <h3 id="decanter-110">Karaf Decanter 1.1.0</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></li>
