Add Apache Karaf (Container) 4.1.2 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1804376 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,11 @@
         </div>
         <div id="content">
             <h2 id="2017">2017</h2>
+            <p style=font-size:11px">
+		<b>Karaf Container 4.1.2 has been released! (8/8/17)</b><br/>
+                Apache Karaf 4.1.2 is a maintenance release on the 4.1.x series, bringing bug fixes and updates.
+	        <a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340261')">Release Notes</a>
+            </p>
             <p style="font-size:11px">
                     <b>Karaf Decanter 1.4.0 has been released! (23/7/17)</b><br/>
 		    Apache Karaf Decanter 1.4.0 is a new major release on the Decanter 1.x serie including bug fixes and couple of new features like the new Apache Camel Event Notifier.
