--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Container 4.1.2 has been released! (8/8/17)</b><br/>
+                                        Apache Karaf 4.1.2 is a maintenance release on the 4.1.x series, bringing bug fixes and updates.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340261')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Decanter 1.4.0 has been released! (23/7/17)</b><br/>
                                         Apache Karaf Decanter 1.4.0 is a new major release on the Decanter 1.x serie including bug fixes and couple of new features like the new Apache Camel Event Notifier.
 				   </div>
@@ -296,21 +311,6 @@
 				   </div>
 				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('decanter_installation.html')">Installation</a>&nbsp; &nbsp;
 					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335659')">Release Notes</a></p>
-			   </div>
-			</center>
-		   </div>
-                    <div>
-			<center>
-			    <div class="banner--text">
-				<br/>
-
-				<div class="banner--text">
-				   <div class="container-fluid">
-					<b>Karaf Container 3.0.8 has been released! (11/8/16)</b><br/>
-                                        This is an update patch for Apache Karaf 3.0.x, containing many bug fixes, dependency updates, and some improvements.
-				   </div>
-				   <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12335948')">Release Notes</a></p>
 			   </div>
 			</center>
 		   </div>
