Publish Cellar 4.1.1 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1812245 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -86,6 +86,7 @@
                 <li>
                     <b><a href="#cellar">Karaf Cellar</a></b>
                     <ul>
+			<li><a href="#cellar-410">4.1.0</a></li>
                         <li><a href="#cellar-403">4.0.3</a></li>
                         <li><a href="#cellar-402">4.0.2</a></li>
                         <li><a href="#cellar-401">4.0.1</a></li>
@@ -519,7 +520,17 @@
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12328245')">Release Notes</a></li>
             </ul>
             <h2 id="cellar">Karaf Cellar</h2>
-            <h3 id="cellar-402">Karaf Cellar 4.0.3</h3>
+            <h3 id="cellar-410">Karaf Cellar 4.1.0</h3>
+            <ul>
+                <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
+                <li>Source Distribution [<a
+                        href="http://archive.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.tar.gz">tar.gz</a>
+                    |
+                    <a href="http://archive.apache.org/dist/karaf/cellar/4.1.0/apache-karaf-cellar-4.1.0-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340615')">Release Notes</a></li>
+            </ul>
+            <h3 id="cellar-403">Karaf Cellar 4.0.3</h3>
             <ul>
                 <li><a href="javascript:var w = window.open('cellar_installation.html')">Installation Instructions</a></li>
                 <li>Source Distribution [<a
