--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,21 @@
 
 				<div class="banner--text">
 				   <div class="container-fluid">
+					<b>Karaf Cellar 4.1.1 has been released! (14/10/17)</b><br/>
+                                        Apache Karaf Cellar 4.1.1 is a maintenance release on the Cellar 4.x series including important bug fixes on the cluster features commands.
+				   </div>
+				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
+					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340615')">Release Notes</a></p>
+			   </div>
+			</center>
+		   </div>
+                    <div>
+			<center>
+			    <div class="banner--text">
+				<br/>
+
+				<div class="banner--text">
+				   <div class="container-fluid">
 					<b>Karaf Container 4.0.10 has been released! (28/09/17)</b><br/>
                                         This is an update patch for Apache Karaf 4.0.x, containing bug fixes.
 				   </div>
@@ -284,21 +299,6 @@
 			   </div>
 			</center>
 		   </div>
-                    <div>
-			<center>
-			    <div class="banner--text">
-				<br/>
-
-				<div class="banner--text">
-				   <div class="container-fluid">
-					<b>Karaf Cellar 4.0.2 has been released! (19/9/16)</b><br/>
-                                        Apache Karaf Cellar 4.0.2 is a maintenance release on the Cellar 4.x serie including important bug fixes.
-				   </div>
-				   <p><a class="btn btn-large btn-success" href="javascript:var w = window.open('cellar_installation.html')">Installation</a>&nbsp; &nbsp;
-					&nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12337886')">Release Notes</a></p>
-			   </div>
-			</center>
-		   </div>
                 <div>
                     <center><a href="news.html">All News</a></center>
                 </div>
@@ -341,8 +341,6 @@
                                     Karaf provides projects, answering the enterprise needs:<br/><br/>
                                     <ul style="list-style-position: inside">
                                         <li>Run your applications in <a href="projects.html#container">Karaf Container</a></li>
-                                        <li>Easily develop and bootstrap your applications with <a href="projects.html#boot">Karaf
-                                            Boot</a></li>
                                         <li>Manage bunch of clustered instances with <a href="projects.html#cellar">Karaf
                                             Cellar</a></li>
                                         <li>Manage your artifacts repositories with <a href="projects.html#cave">Karaf
