--- a/src/main/webapp/privacy.html
+++ b/src/main/webapp/privacy.html
@@ -44,34 +44,38 @@
             </div>
         </div>
     </header>
-    <br/>
-    <div class="container">
-        <h2>Privacy Policy</h2>
-        Information about your use of this website is collected using server access logs and a tracking cookie. The collected information consists of the following:<br/>
-        <br/>
-        <ol>
-            <li>The IP address from which you access the website;</li>
-            <li>The type of browser and operating system you use to access our site;</li>
-            <li>The date and time you access our site;</li>
-            <li>The pages you visit; and</li>
-            <li>The addresses of pages from where you followed a link to our site.</li>
-        </ol>
-        Part of this information is gathered using a tracking cookie set by the <a href="http://www.google.com/analytics/">Google Analytics</a> service and handled by Google as described in their <a href="http://www.google.com/privacy.html">privacy policy</a>. See your browser documentation for instructions on how to disable the cookie if you prefer not to share this data with Google.<br/>
-        <br/>
-        We use the gathered information to help us make our site more useful to visitors and to better understand how and when our site is used. We do not track or collect personally identifiable information or associate gathered data with any personally identifying information from other sources.<br/>
-        <br/>
-        By using this website, you consent to the collection of this data in the manner and for the purpose described above.<br/>
-        <br/>
+<br/><br/><br/><br/><br/><br/>
+    <div class="body--container container-fluid ">
+        <div class="container">
+            <div class="content--panel">
+                <h2>Privacy Policy</h2>
+                Information about your use of this website is collected using server access logs and a tracking cookie. The collected information consists of the following :<br/>
+                <br/>
+                <ol>
+                    <li>The IP address from which you access the website</li>
+                    <li>The type of browser and operating system you use to access our site</li>
+                    <li>The date and time you access our site</li>
+                    <li>The pages you visit and</li>
+                    <li>The addresses of pages from where you followed a link to our site.</li>
+                </ol>
+                Part of this information is gathered using a tracking cookie set by the <a href="http://www.google.com/analytics/">Google Analytics</a> service and handled by Google as described in their <a href="http://www.google.com/privacy.html">privacy policy</a>. See your browser documentation for instructions on how to disable the cookie if you prefer not to share this data with Google.<br/>
+                <br/>
+                We use the gathered information to help us make our site more useful to visitors and to better understand how and when our site is used. We do not track or collect personally identifiable information or associate gathered data with any personally identifying information from other sources.<br/>
+                <br/>
+                By using this website, you consent to the collection of this data in the manner and for the purpose described above.<br/>
+            </div>
+        </div>
     </div>
-    <div class="body--container container-fluid "></div>
+
     <footer class="footer">
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    &copy; <span>2016</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
+                    <div class="footer-documentation--text">
+                    &copy; <span>2017</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
                         href="privacy.html">Privacy Policy</a><br/>
                     Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are
-                    trademarks of The Apache Software Foundation.
+                    trademarks of The Apache Software Foundation.</div>
                 </div>
             </div>
         </div>
