--- a/src/main/webapp/decanter_installation.html
+++ b/src/main/webapp/decanter_installation.html
@@ -18,51 +18,100 @@
 </head>
 <body>
 <div class="viewport">
+    <header class="navbar header--navbar">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <div class="karaf-logo--container">
+                    <a class="karaf-logo" href="index.html"><span></span></a>
+                </div>
+                <ul class="nav pull-right">
+                    <li class="navbar-link">
+                        <a href="download.html">Download</a>
+                    </li>
+                    <li class="navbar-link">
+                        <a href="documentation.html">Documentation</a>
+                    </li>
+                    <li class="navbar-link">
+                        <a href="projects.html">Projects</a>
+                    </li>
+                    <li class="navbar-link">
+                        <a href="community.html">Community</a>
+                    </li>
+                    <li class="navbar-link">
+                        <a href="http://www.apache.org"><img src="images/apache-feather-tm.svg"/></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
-    <h2>Apache Karaf Decanter Installation</h2>
+    <div class="container">
+        <div id="content">
+            <div class="content--panel">
 
-    Apache Karaf Decanter is a complete monitoring solution, working with any Karaf Container version.
-    <br/>
-    Decanter is able to monitor Karaf Container itself, but also any middleware running in your ecosystem.
-    <br/>
-    Decanter can be directly installed on any running Karaf Container instance. The following instructions are just
-    example. Take a look on the <a href="documentation.html">Karaf Decanter documentation</a> for details.
+                <h2>Apache Karaf Decanter Installation</h2>
 
-    <h3>On Karaf Container 4.x</h3>
-    <div class="code">
-        <pre>
-            feature:repo-add decanter
-            feature:install elasticsearch
-            feature:install kibana
-            feature:install decanter-appender-elasticsearch
-            feature:install decanter-collector-log
-            feature:install decanter-collector-jmx
-        </pre>
+                Apache Karaf Decanter is a complete monitoring solution, working with any Karaf Container version.
+                <br/>
+                Decanter is able to monitor Karaf Container itself, but also any middleware running in your ecosystem.
+                <br/>
+                Decanter can be directly installed on any running Karaf Container instance. The following instructions are just
+                example. Take a look on the <a href="documentation.html">Karaf Decanter documentation</a> for details.<br/><br/>
+
+                <h3>On Karaf Container 4.x</h3>
+                <div class="code">
+                    <pre>
+                        feature:repo-add decanter
+                        feature:install elasticsearch
+                        feature:install kibana
+                        feature:install decanter-appender-elasticsearch
+                        feature:install decanter-collector-log
+                        feature:install decanter-collector-jmx
+                    </pre>
+                </div>
+
+                <h3>On Karaf Container 3.x</h3>
+                <div class="code">
+                    <pre>
+                        feature:repo-add decanter
+                        feature:install elasticsearch
+                        feature:install kibana
+                        feature:install decanter-appender-elasticsearch
+                        feature:install decanter-collector-log
+                        feature:install decanter-collector-jmx
+                    </pre>
+                </div>
+
+                <h3>On Karaf Container 2.x</h3>
+                <div class="code">
+                    <pre>
+                        features:chooseUrl decanter
+                        features:install elasticsearch
+                        features:install kibana
+                        features:install decanter-appender-elasticsearch
+                        features:install decanter-collector-log
+                        features:install decanter-collector-jmx
+                    </pre>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <h3>On Karaf Container 3.x</h3>
-    <div class="code">
-        <pre>
-            feature:repo-add decanter
-            feature:install elasticsearch
-            feature:install kibana
-            feature:install decanter-appender-elasticsearch
-            feature:install decanter-collector-log
-            feature:install decanter-collector-jmx
-        </pre>
-    </div>
-
-    <h3>On Karaf Container 2.x</h3>
-    <div class="code">
-        <pre>
-            features:chooseUrl decanter
-            features:install elasticsearch
-            features:install kibana
-            features:install decanter-appender-elasticsearch
-            features:install decanter-collector-log
-            features:install decanter-collector-jmx
-        </pre>
-    </div>
+    <div class="body--container container-fluid "></div>
+    <footer class="footer">
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class="footer-documentation--text">
+                    &copy; <span>2017</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
+                        href="privacy.html">Privacy Policy</a><br/>
+                    Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are
+                    trademarks of The Apache Software Foundation.</div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div id="scrim"></div>
 
 </div>
 </body>
