--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,6 +77,15 @@
                         <center>
                             <div class="banner--text">
                                <div class="container-fluid">
+                                <b>Karaf Cave 4.1.0 has been released! (2/1/18)</b> - This is the first release in the Cave 4.1.x series. It brings bug fixes, improvements, and the new Deployer feature. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340462')">Release Notes</a>)
+                               </div>
+                           </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                               <div class="container-fluid">
                                 <b>Karaf Container 4.1.4 has been released! (19/12/17)</b> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341702')">Release Notes</a>)
                                </div>
                            </div>
@@ -168,15 +177,6 @@
                             <div class="banner--text">
                                <div class="container-fluid">
                                 <b>Karaf Container 4.1.1 has been released! (31/03/17)</b> - This is an update release on the Apache Karaf 4.1.x series, bringing lot of bug fixes and updates. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12339244')">Release Notes</a>)
-                               </div>
-                           </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                               <div class="container-fluid">
-                                <b>Karaf Container 4.1.0 has been released! (04/02/17)</b> - Apache Karaf 4.1.0 is the first release of the new 4.1.x serie. It brings lot of new features (new shell console, improvements of the Karaf Features system, better Maven artifacts resolution, improved web container, ...). (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332799')">Release Notes</a>)
                                </div>
                            </div>
                         </center>
