--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -49,6 +49,7 @@
         <div id="menu" class="desktop-only">
             <h1>News</h1>
             <ul>
+                <li><b><a href="#2018">2018</a></b></li>
                 <li><b><a href="#2017">2017</a></b></li>
                 <li><b><a href="#2016">2016</a></b></li>
                 <li><b><a href="#2015">2015</a></b> </li>
@@ -61,6 +62,12 @@
         </div>
 
         <div id="content">
+            <h2 id="2018">2018</h2>
+            <div class="content--panel content--news">
+                      <h3>Karaf Cave 4.1.0 has been released! (2/1/18)</h3>
+              Ths is the first release in the Cave 4.1.x series. It brings bug fixes, improvements, and the new Deployer feature. <br>
+              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340462')">> Release Notes</a>
+            </div> 
             <h2 id="2017">2017</h2>
             <div class="content--panel content--news">
                       <h3>Karaf Container 4.1.4 has been released! (19/12/17)</h3>
