--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,7 +77,7 @@
                         <center>
                             <div class="banner--text">
                                <div class="container-fluid">
-                                <b>Karaf Cave 4.2.0.M2 has been released! (2/1/18)</b> - This is the second technical preview for the 4.2.x series. Thhis is not a GA. The purpose is to continue the test campaign in preparation for the 4.2.0 GA release. Compared to 4.2.0.M1, 4.2.0.M2 contains bug fixes and improvements, especially around the Java 9 support.  (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">Release Notes</a>)
+                                <b>Karaf Cave 4.2.0.M2 has been released! (2/1/18)</b> - This is the second technical preview for the 4.2.x series. This is not a GA. The purpose is to continue the test campaign in preparation for the 4.2.0 GA release. Compared with 4.2.0.M1, 4.2.0.M2 contains bug fixes and improvements, especially around the Java 9 support.  (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">Release Notes</a>)
                                </div>
                            </div>
                         </center>
