Announce Apache Karaf Decanter 2.0.0 release

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,7 +77,16 @@
                         <center>
                             <div class="banner--text">
                                <div class="container-fluid">
-                                <b>Karaf Cave 4.2.0.M2 has been released! (2/1/18)</b> - This is the second technical preview for the 4.2.x series. This is not a GA. The purpose is to continue the test campaign in preparation for the 4.2.0 GA release. Compared with 4.2.0.M1, 4.2.0.M2 contains bug fixes and improvements, especially around the Java 9 support.  (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">Release Notes</a>)
+                                <b>Karaf Decanter 2.2.0 has been released! (6/1/18)</b> - This is a new Decanter series, providing new features and bug fixes. It's designed to work specifically on Apache Karaf 4.x.  (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341053')">Release Notes</a>)
+                               </div>
+                           </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                               <div class="container-fluid">
+                                <b>Karaf "Container" 4.2.0.M2 has been released! (2/1/18)</b> - This is the second technical preview for the 4.2.x series. This is not a GA. The purpose is to continue the test campaign in preparation for the 4.2.0 GA release. Compared with 4.2.0.M1, 4.2.0.M2 contains bug fixes and improvements, especially around the Java 9 support.  (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">Release Notes</a>)
                                </div>
                            </div>
                         </center>
@@ -168,15 +177,6 @@
                             <div class="banner--text">
                                <div class="container-fluid">
                                 <b>Karaf Cellar 4.1.0 has been released! (15/5/17)</b> - Apache Karaf Cellar 4.1.0 is the first release in the Cellar 4.1.x serie, fully compatible with Karaf 4.1.x and providing important improvements and bug fixes. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340376')">Release Notes</a>)
-                               </div>
-                           </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                               <div class="container-fluid">
-                                <b>Karaf Container 4.0.9 has been released! (10/04/17)</b> - This is an update patch for Apache Karaf 4.0.x, containing bug fixes. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338821')">Release Notes</a>)
                                </div>
                            </div>
                         </center>
