--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -651,6 +651,16 @@
                         <th>Notes</th>
                     </tr>
                     <tr>
+                        <td>1.4.0</td>
+                        <td><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></td>
+                        <td><a
+                                href="http://archive.apache.org/dist/karaf/decanter/1.3.0/apache-karaf-decanter-1.4.0-src.tar.gz">tar.gz</a>
+                            |
+                            <a href="http://archive.apache.org/dist/karaf/decanter/1.3.0/apache-karaf-decanter-1.4.0-src.zip">zip</a>
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338800')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>1.3.0</td>
                         <td><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></td>
                         <td><a
@@ -660,7 +670,6 @@
                         </td>
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338064')">Release Notes</a></td>
                     </tr>
-                    
                     <tr>
                         <td>1.2.0</td>
                         <td><a href="javascript:var w = window.open('decanter_installation.html')">Installation Instructions</a></td>
