--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -612,7 +612,7 @@
                             Source Distribution
                         </div>
                         <div class="span9">
-                            <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.sha1">SHA1</a>]< - 
+                            <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.sha1">SHA1</a>] - 
                             <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.zip.sha1">SHA1</a>]
                         </div>
                     </div>
