--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -237,6 +237,19 @@
                         </td>
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332045')">Release Notes</a></td>
                     </tr>
+
+                    <tr>
+                        <td>3.0.8</h3>
+                        <td><a
+                                href="http://archive.apache.org/dist/karaf/3.0.8/apache-karaf-3.0.8.tar.gz">tar.gz</a> |
+                            <a href="http://archive.apache.org/dist/karaf/3.0.8/apache-karaf-3.0.8.zip">zip</a>
+                        </td>
+                        <td><a
+                                href="http://archive.apache.org/dist/karaf/3.0.8/apache-karaf-3.0.8-src.tar.gz">tar.gz</a>
+                            | <a href="http://archive.apache.org/dist/karaf/3.0.8/apache-karaf-3.0.8-src.zip">zip</a>
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">Release Notes</a></td>
+                    </tr>
                     
                     <tr>
                         <td>3.0.7</h3>
