--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,6 +77,15 @@
                         <center>
                             <div class="banner--text">
                                <div class="container-fluid">
+                                <b>Karaf Container 3.0.9 has been released! (2/3/18)</b> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">Release Notes</a>)
+                               </div>
+                           </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                               <div class="container-fluid">
                                 <b>Karaf Container 4.1.5 has been released! (15/2/18)</b> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342294')">Release Notes</a>)
                                </div>
                            </div>
