--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -64,6 +64,11 @@
         <div id="content">
             <h2 id="2018">2018</h2>
             <div class="content--panel content--news">
+                      <h3>Karaf Container 3.0.9 has been released! (2/3/18)</h3>
+              Ths is an update patch for Apache Karaf 3.0.x, containing minor bug fixes and dependency upgrades.<br>
+              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">> Release Notes</a>
+            </div> 
+            <div class="content--panel content--news">
                       <h3>Karaf Container 4.1.5 has been released! (15/2/18)</h3>
               Ths is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements.<br>
               <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342294')">> Release Notes</a>
